--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.23",
     "gsap": "^3.14.2",
     "locomotive-scroll": "^4.1.4",
+    "ogl": "^1.0.11",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
